--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/solicitud-novedad/solicitud-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/solicitud-novedad/solicitud-novedad.component.html
@@ -109,6 +109,165 @@
   <mat-card-content>
     <p>
       <strong>
+        Fecha de solicitud de la novedad :
+      </strong>
+      17/10/2020
+    </p>
+    <p>
+      <strong>
+        Instancia donde se presentó la solicitud :
+      </strong>
+      <span>
+        Comité de obra
+      </span>
+    </p>
+    <p>
+      <strong>
+        Fecha de la sesión de la instancia :
+      </strong>
+      12/10/2020
+    </p>
+    <p>
+      <strong>
+        Tipo de Novedad :
+      </strong>
+      Modificación de Condiciones Contractuales
+    </p>
+
+  </mat-card-content>
+</mat-card>
+    <mat-accordion>
+  <mat-expansion-panel class="expansion-style sub-expansion">
+    <mat-expansion-panel-header class="expansion-style--header">
+      <mat-panel-title class="expansion-style--title">
+        Novedad 1
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <mat-card class="shipping-card var-main-gris">
+      <mat-card-header class="header-card header-card--margin">
+        <mat-card-title class="header-card--text textoGris">
+          Suspensión
+        </mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <p><strong>Motivos de la novedad :</strong>xxxxxxxx </p>
+        <p><strong>Resumen de la justificación de la novedad: </strong></p>
+        <p>
+          xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        </p>
+        <mat-card-title class="header-card--text sub-text">
+          Plazo solicitado
+        </mat-card-title>
+        <p><strong>Fecha de inicio de la suspensión: </strong> xxxxxxxxxxxxxxxxxx</p>
+        <p><strong>Fecha final de la suspensión: </strong> xxxxxxxxxxxxxxxxxx</p>
+        <p><strong>¿Cuenta con la documentación soporte suficiente?: </strong> No</p>
+        <p><strong>Concepto técnico: </strong></p>
+        <p>
+          xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        </p>
+        <p><strong>Fecha concepto técnico: </strong> xxxxxxxxxxxxxxxxxx</p>
+        <p><strong>Número de radicado en FFIE de solicitud: </strong> xxxxxxxxxxxxxxxxxx</p>
+      </mat-card-content>
+    </mat-card>
+  </mat-expansion-panel>
+  <mat-expansion-panel class="expansion-style sub-expansion">
+    <mat-expansion-panel-header class="expansion-style--header">
+      <mat-panel-title class="expansion-style--title">
+        Novedad 2
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <mat-card class="shipping-card var-main-gris">
+      <mat-card-header class="header-card header-card--margin">
+        <mat-card-title class="header-card--text textoGris">
+          Adición
+        </mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <p><strong>Motivos de la novedad :</strong>xxxxxxxx </p>
+        <p><strong>Resumen de la justificación de la novedad: </strong></p>
+        <p>
+          xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        </p>
+        <p><strong>Presupuesto adicional solicitado:</strong>xxxxxxxxxxxxx </p>
+        <p><strong>¿Cuenta con la documentación soporte suficiente?:</strong>No </p>
+        <p><strong>Concepto técnico: </strong></p>
+        <p>
+          xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        </p>
+        <p><strong>Fecha concepto técnico: </strong> xxxxxxxxxxxxxxxxxx</p>
+        <p><strong>Número de radicado en FFIE de solicitud: </strong> xxxxxxxxxxxxxxxxxx</p>
+      </mat-card-content>
+    </mat-card>
+  </mat-expansion-panel>
+  <mat-expansion-panel class="expansion-style sub-expansion">
+    <mat-expansion-panel-header class="expansion-style--header">
+      <mat-panel-title class="expansion-style--title">
+        Novedad 3
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <mat-card class="shipping-card var-main-gris">
+      <mat-card-header class="header-card header-card--margin">
+        <mat-card-title class="header-card--text textoGris">
+          Modificaciones de condiciones contractuales
+        </mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <p><strong>Motivos de la novedad :</strong>xxxxxxxx </p>
+        <p><strong>Resumen de la justificación de la novedad: </strong></p>
+        <p>
+          xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        </p>
+        <mat-card-title class="header-card--text sub-text">
+          Clausula 1
+        </mat-card-title>
+        <p><strong>Cláusula a modificar: </strong></p>
+        <p>
+          xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        </p>
+        <p><strong>Ajuste solicitado a la cláusula: </strong></p>
+        <p>
+          xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        </p>
+        <mat-card-title class="header-card--text sub-text">
+          Clausula 2
+        </mat-card-title>
+        <p><strong>Cláusula a modificar: </strong></p>
+        <p>
+          xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        </p>
+        <p><strong>Ajuste solicitado a la cláusula: </strong></p>
+        <p>
+          xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        </p>
+        <p><strong>¿Cuenta con la documentación soporte suficiente?:</strong>No </p>
+        <p><strong>Concepto técnico: </strong></p>
+        <p>
+          xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        </p>
+        <p><strong>Fecha concepto técnico: </strong> xxxxxxxxxxxxxxxxxx</p>
+        <p><strong>Número de radicado en FFIE de solicitud: </strong> xxxxxxxxxxxxxxxxxx</p>
+      </mat-card-content>
+    </mat-card>
+  </mat-expansion-panel>
+  <mat-expansion-panel class="expansion-style sub-expansion">
+    <mat-expansion-panel-header class="expansion-style--header">
+      <mat-panel-title class="expansion-style--title">
+        Novedad 4
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    
+  </mat-expansion-panel>
+</mat-accordion>
+<!--
+<mat-card class="shipping-card var-main-gris">
+  <mat-card-header class="header-card header-card--margin">
+    <mat-card-title class="header-card--text">
+      Registro de novedad
+    </mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <p>
+      <strong>
         Fecha de solicitud de la novedad:
       </strong>
       17/10/2020
@@ -189,3 +348,4 @@
     </p>
   </mat-card-content>
 </mat-card>
+-->
