--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-ejfinanciera-rlc/tabla-ejfinanciera-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-ejfinanciera-rlc/tabla-ejfinanciera-rlc.component.html
@@ -4,7 +4,7 @@
       <ng-container matColumnDef="componente">
         <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20%;"> Concepto </th>
         <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.componente }}</b> </td>
-        <td *matFooterCellDef align="center" class="auxiliarTd"> <b>Valor total</b> </td>
+        <td *matFooterCellDef align="center" class="auxiliarTd"> <b>Total</b> </td>
       </ng-container>
     
       <ng-container matColumnDef="totalComprometido">
