--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/form-registrar-novedad-accord/form-registrar-novedad-accord.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/form-registrar-novedad-accord/form-registrar-novedad-accord.component.html
@@ -83,6 +83,54 @@
         </div>
       </div>
 
+      <div class="row" *ngIf="novedadDescripcion.tipoNovedadCodigo == '1' || novedadDescripcion.tipoNovedadCodigo == '2'">
+        <div class="col-md-8">
+          <div class="row">
+            <div class="pr-1">
+              <label class="label-left" for="fechaInicio" [class.color-secondaryColor]="
+                  addressForm.get('fechaInicio').invalid && addressForm.get('fechaInicio').touched ||
+                  addressForm.get('fechaInicio').invalid && estaEditando">
+                Fecha de inicio de la suspensión
+              </label>
+            </div>
+            <div class="col d-flex">
+              <mat-form-field class="example-full-width">
+                <input matInput [matDatepicker]="pickerPlazoInicio" formControlName="fechaInicio" readonly
+                  (click)="pickerPlazoInicio.open()" placeholder="DD/MM/AAAA" required>
+                <mat-datepicker #pickerPlazoInicio></mat-datepicker>
+              </mat-form-field>
+              <button mat-button color="primary" type="button" (click)="pickerPlazoInicio.open()"
+                class="btn-calendario">
+                <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario">
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row" *ngIf="novedadDescripcion.tipoNovedadCodigo == '1' || novedadDescripcion.tipoNovedadCodigo == '2'">
+        <div class="col-md-8">
+          <div class="row">
+            <div class="pr-1">
+              <label class="label-left" for="fechaFinal" [class.color-secondaryColor]="
+                    addressForm.get('fechaFinal').invalid && addressForm.get('fechaFinal').touched ||
+                    addressForm.get('fechaFinal').invalid && estaEditando">
+                Fecha final de la suspensión
+              </label>
+            </div>
+            <div class="col d-flex">
+              <mat-form-field class="example-full-width">
+                <input matInput [matDatepicker]="pickerPlazoFin" formControlName="fechaFinal" readonly
+                  (click)="pickerPlazoFin.open()" placeholder="DD/MM/AAAA" required>
+                <mat-datepicker #pickerPlazoFin></mat-datepicker>
+              </mat-form-field>
+              <button mat-button color="primary" type="button" (click)="pickerPlazoFin.open()" class="btn-calendario">
+                <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario">
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <mat-card-title class="header-card--text sub-text" *ngIf="novedadDescripcion.tipoNovedadCodigo == '4'">
         Plazo solicitado
       </mat-card-title>
