--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/expansion-panel/expansion-panel.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/expansion-panel/expansion-panel.component.html
@@ -30,7 +30,7 @@
           Liquidación de contrato de interventoria
         </mat-panel-title>
       </mat-expansion-panel-header>
-      
+      <app-tabla-liquidacion-contrato-interventoria></app-tabla-liquidacion-contrato-interventoria>
     </mat-expansion-panel>
   </mat-accordion>
 </div>
