--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/accord-vigencias-valor/accord-vigencias-valor.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/accord-vigencias-valor/accord-vigencias-valor.component.html
@@ -16,7 +16,7 @@
                     </mat-card-header>
                     <mat-card-content style="text-align: left;" [formGroup]="seguro">
                         <div class="mt-2em" *ngIf="seguro.get( 'tieneSeguro' ).value === true">
-                            <p><b>Vigencia de la póliza: </b><em> {{ seguro.get( 'vigenciaPoliza' ).value | date: 'dd/MM/yyyy' }} </em></p>
+                            <p><b>Vigencia de la póliza: </b><em> {{ contratoPoliza.vigencia | date: 'dd/MM/yyyy' }} </em></p>
                             <div class="row">
                                 <div class="col-md-8">
                                     <div class="row">
@@ -53,7 +53,7 @@
                             </div>
                         </div>
                         <div class="mt-2em" *ngIf="seguro.get( 'tieneFechaAmparo' ).value === true">
-                            <p><b>Vigencia del amparo: </b><em> {{ seguro.get( 'vigenciaAmparo' ).value | date: 'dd/MM/yyyy' }} </em></p>
+                            <p><b>Vigencia del amparo: </b><em> {{ contratoPoliza.vigenciaAmparo | date: 'dd/MM/yyyy' }} </em></p>
                             <div class="row">
                                 <div class="col-md-8">
                                     <div class="row">
@@ -90,7 +90,7 @@
                             </div>
                         </div>
                         <div class="mt-2em" *ngIf="seguro.get( 'tieneValorAmparo' ).value === true">
-                            <p><b>Valor del amparo: </b><em> {{ seguro.get( 'valor' ).value | currency:'':'symbol-narrow':'.0-0' }} </em></p>
+                            <p><b>Valor del amparo: </b><em> {{ contratoPoliza.valorAmparo | currency:'':'symbol-narrow':'.0-0' }} </em></p>
                             <div class="row">
                                 <div class="col-md-8">
                                     <div class="row">
@@ -129,8 +129,12 @@
                     </mat-card-content>
                 </mat-card>
                 <div class="text-center mb-2em">
-                    <button mat-button color="warn" class="btn-guardar" type="submit">
-                        <img src="assets/img/icon/guardar.svg" alt="Regresar" />
+                    <button mat-button
+                            color="warn"
+                            class="btn-guardar"
+                            type="submit"
+                            [disabled]="seguro.dirty === false">
+                            <img src="assets/img/icon/guardar.svg" alt="Regresar">
                     </button>
                 </div>
             </mat-expansion-panel>
