--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/actualizar-poliza-rapg/actualizar-poliza-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/actualizar-poliza-rapg/actualizar-poliza-rapg.component.html
@@ -9,15 +9,15 @@
     </h1>
     <mat-card class="shipping-card mainGris">
         <mat-card-content style="text-align: left;">
-            <p><strong>Tipo de contrato: </strong> <em>Obra</em></p>
+            <p><strong>Tipo de contrato: </strong> <em> {{ getTipoSolicitudContrato( contratoPoliza.contrato.contratacion.tipoSolicitudCodigo ) }} </em></p>
             <p><strong>Nombre del contratista: </strong> <em>Intervenrores S.A</em></p>
             <p><strong>Tipo de identificación: </strong> <em>NIT</em></p>
             <p><strong>Número de identificación: </strong> <em>900.675.987-4</em></p>
-            <p><strong>Número de la póliza: </strong> <em>0000-9868</em></p>
-            <p><strong>Nombre de la aseguradora:</strong> <em>Mapfre</em></p>
-            <p><strong>Número de certificado: </strong> <em>CER404040</em></p>
-            <p><strong>Fecha de expedición de la póliza: </strong> <em>25/06/2020</em></p>
-            <p><strong>Fecha de aprobación: </strong> <em>18/07/2020</em></p>
+            <p><strong>Número de la póliza: </strong> <em> {{ contratoPoliza.numeroPoliza }} </em></p>
+            <p><strong>Nombre de la aseguradora:</strong> <em> {{ contratoPoliza.nombreAseguradora }} </em></p>
+            <p><strong>Número de certificado: </strong> <em> {{ contratoPoliza.numeroCertificado }} </em></p>
+            <p><strong>Fecha de expedición de la póliza: </strong> <em> {{ contratoPoliza.fechaExpedicion | date: 'dd/MM/yyyy' }} </em></p>
+            <p><strong>Fecha de aprobación: </strong> <em> {{ contratoPoliza.fechaAprobacion | date: 'dd/MM/yyyy' }} </em></p>
         </mat-card-content>
     </mat-card>
     <div class="table-responsive">
@@ -48,7 +48,8 @@
                     Razón y tipo de actualización
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <app-razon-tipo-actualizacion-rapg></app-razon-tipo-actualizacion-rapg>
+
+            <app-razon-tipo-actualizacion-rapg [contratoPoliza]="contratoPoliza"></app-razon-tipo-actualizacion-rapg>
         </mat-expansion-panel>
     </mat-accordion>
     <mat-accordion>
@@ -58,7 +59,8 @@
                     Vigencias y valor
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <app-accord-vigencias-valor></app-accord-vigencias-valor>
+
+            <app-accord-vigencias-valor [contratoPoliza]="contratoPoliza"></app-accord-vigencias-valor>
         </mat-expansion-panel>
     </mat-accordion>
     <mat-accordion>
@@ -68,6 +70,7 @@
                     Observaciones especificas
                 </mat-panel-title>
             </mat-expansion-panel-header>
+
             <app-observaciones-especificas-rapg></app-observaciones-especificas-rapg>
         </mat-expansion-panel>
     </mat-accordion>
@@ -78,6 +81,7 @@
                     Lista de chequeo
                 </mat-panel-title>
             </mat-expansion-panel-header>
+
             <app-lista-chequeo-rapg></app-lista-chequeo-rapg>
         </mat-expansion-panel>
     </mat-accordion>
@@ -88,6 +92,7 @@
                     Revisión y aprobación
                 </mat-panel-title>
             </mat-expansion-panel-header>
+
             <app-revision-aprobacion-rapg></app-revision-aprobacion-rapg>
         </mat-expansion-panel>
     </mat-accordion>
