--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/razon-tipo-actualizacion-rapg/razon-tipo-actualizacion-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/razon-tipo-actualizacion-rapg/razon-tipo-actualizacion-rapg.component.html
@@ -14,8 +14,7 @@
                         <div class="col">
                             <mat-form-field class="select-width">
                                 <mat-select formControlName="razonActualizacion" required>
-                                    <mat-option *ngFor="let razonActualizacion of razonActualizacionArray"
-                                        [value]="razonActualizacion">
+                                    <mat-option *ngFor="let razonActualizacion of razonActualizacionArray" [value]="razonActualizacion.codigo">
                                         {{ razonActualizacion.nombre }}
                                     </mat-option>
                                 </mat-select>
@@ -122,7 +121,7 @@
                                 <div class="col">
                                     <mat-form-field class="select-width">
                                         <mat-select formControlName="tipoActualizacion" multiple required>
-                                            <mat-option *ngFor="let tipoActualizacion of tipoActualizacionArray" [value]="tipoActualizacion">
+                                            <mat-option *ngFor="let tipoActualizacion of tipoActualizacionArray" [value]="tipoActualizacion.codigo">
                                                 {{ tipoActualizacion.nombre }}
                                             </mat-option>
                                         </mat-select>
