--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/actualizar-poliza-rapg/actualizar-poliza-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/actualizar-poliza-rapg/actualizar-poliza-rapg.component.html
@@ -71,7 +71,7 @@
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <app-observaciones-especificas-rapg></app-observaciones-especificas-rapg>
+            <app-observaciones-especificas-rapg [contratoPoliza]="contratoPoliza"></app-observaciones-especificas-rapg>
         </mat-expansion-panel>
     </mat-accordion>
     <mat-accordion>
