--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-otros-temas/form-otros-temas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-otros-temas/form-otros-temas.component.html
@@ -37,8 +37,7 @@
         </div>
         <div class="col d-flex">
           <quill-editor
-            class="quill-editor-style card position-relative"
-            [styles]="editorStyle"
+            class="quill-editor-style card position-relative quill-editor-style--max-height"
             [modules]="config"
             required
             (onContentChanged)="maxLength($event, 5000)"
@@ -147,8 +146,7 @@
         </div>
         <div class="col d-flex">
           <quill-editor
-            class="quill-editor-style card position-relative"
-            [styles]="editorStyle"
+            class="quill-editor-style card position-relative quill-editor-style--max-height"
             [modules]="config"
             required
             (onContentChanged)="maxLength($event, 5000)"
