--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-verificar-cumplimiento/tabla-verificar-cumplimiento.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-verificar-cumplimiento/tabla-verificar-cumplimiento.component.html
@@ -32,17 +32,13 @@
 
       <ng-container matColumnDef="fechaCumplimiento">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha de cumplimiento</th>
-        <td mat-cell *matCellDef="let element">{{ element.fechaCumplimiento | date: 'dd/MM/yyyy' }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.fechaCumplimiento }}</td>
       </ng-container>
 
       <ng-container matColumnDef="fechaModificacion">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha del reporte</th>
         <td mat-cell *matCellDef="let element">
-          {{
-            element.fechaModificacion
-              ? (element.fechaModificacion | date: 'dd/MM/yyyy')
-              : (element.fechaCreacion | date: 'dd/MM/yyyy')
-          }}
+          {{ element.fechaModificacion ? element.fechaModificacion : element.fechaCreacion }}
         </td>
       </ng-container>
 
@@ -73,7 +69,6 @@
             <mat-select
               [(ngModel)]="element.compromisoSeleccionado"
               (selectionChange)="onChange(element, $event.value)"
-              
               style="width: 8.5em; margin: 0px 30px 0 0"
             >
               <mat-option *ngFor="let estado of estaCumplido" [value]="estado">
@@ -89,9 +84,7 @@
                 [matTooltipPosition]="'above'"
                 matTooltip="Debe ingresar la información en el campo para continuar"
                 matTooltipClass="info-tooltip"
-                *ngIf="
-                  !element.compromisoSeleccionado && estaEditando
-                "
+                *ngIf="!element.compromisoSeleccionado && estaEditando"
               />
             </span>
           </section>
