--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/form-otros-temas/form-otros-temas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/form-otros-temas/form-otros-temas.component.html
@@ -306,7 +306,13 @@
                 </label>
               </div>
               <div class="col d-flex">
-                <mat-form-field class="full-width">
+                <mat-form-field
+                  class="full-width"
+                  [class.mat-form-field-invalid]="
+                    (compromiso.get('tarea').invalid && compromiso.get('tarea').touched) ||
+                    (compromiso.get('tarea').invalid && estaEditando)
+                  "
+                >
                   <input matInput #tarea type="text" maxlength="500" formControlName="tarea" required />
                   <input type="hidden" formControlName="temaCompromisoId" />
                   <input type="hidden" formControlName="sesionTemaId" />
@@ -350,7 +356,13 @@
               </label>
             </div>
             <div class="col">
-              <mat-form-field class="select-width">
+              <mat-form-field
+                class="select-width"
+                [class.mat-form-field-invalid]="
+                  (compromiso.get('responsable').invalid && compromiso.get('responsable').touched) ||
+                  (compromiso.get('responsable').invalid && estaEditando)
+                "
+              >
                 <mat-select required formControlName="responsable">
                   <mat-option *ngFor="let estado of listaMiembros" [value]="estado">
                     {{ estado.nombre }}
@@ -388,7 +400,14 @@
                   </label>
                 </div>
                 <div class="col d-flex">
-                  <mat-form-field class="example-full-width">
+                  <mat-form-field
+                    class="example-full-width"
+                    class="example-full-width"
+                    [class.mat-form-field-invalid]="
+                      (compromiso.get('fecha').invalid && compromiso.get('fecha').touched) ||
+                      (compromiso.get('fecha').invalid && estaEditando)
+                    "
+                  >
                     <input
                       matInput
                       [matDatepicker]="picker"
