--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
@@ -38,33 +38,24 @@
     <ng-container matColumnDef="estado">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado del proyecto</th>
       <td mat-cell *matCellDef="let element">
-        
         <div class="d-flex">
           <!-- obra -->
-          <mat-form-field class="select-width"
+          <mat-form-field
+            class="select-width"
             [class.mat-form-field-invalid]="!element.proyecto.estadoProyectoObraCodigo && estaEditando"
-            *ngIf="contratacion.tipoSolicitudCodigo === '1'">
-            <mat-select required [(ngModel)]="element.proyecto.estadoProyectoObraCodigo"
-              (selectionChange)="onChangeEstado()">
+            *ngIf="contratacion.tipoSolicitudCodigo === '1'"
+          >
+            <mat-select
+              required
+              [(ngModel)]="element.proyecto.estadoProyectoObraCodigo"
+              (selectionChange)="onChangeEstado()"
+            >
               <mat-option *ngFor="let estado of listaEstados" [value]="estado.codigo">
                 {{ estado.nombre }}
               </mat-option>
             </mat-select>
           </mat-form-field>
-
-          <!-- interventoria -->
-          <mat-form-field class="select-width"
-            [class.mat-form-field-invalid]="!element.proyecto.estadoProyectoInterventoriaCodigo && estaEditando"
-            *ngIf="contratacion.tipoSolicitudCodigo === '2'">
-            <mat-select required [(ngModel)]="element.proyecto.estadoProyectoInterventoriaCodigo"
-              (selectionChange)="onChangeEstado()">
-              <mat-option *ngFor="let estado of listaEstados" [value]="estado.codigo">
-                {{ estado.nombre }}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-
-          <span class="icon-incompleto">
+          <span class="icon-incompleto" *ngIf="contratacion.tipoSolicitudCodigo === '1'">
             <img
               class="icon-incompleto--img"
               src="assets/img/icon/incompleto.svg"
@@ -73,10 +64,44 @@
               matTooltip="Debe ingresar la información en el campo para continuar"
               matTooltipClass="info-tooltip"
               *ngIf="
-                (!element.proyecto.estadoProyectoObraCodigo && estaEditando) ||
-                (element.proyecto.estadoProyectoObraCodigo == 0 && estaEditando) ||
-                (!element.proyecto.estadoProyectoInterventoriaCodigo && estaEditando) ||
-                (element.proyecto.estadoProyectoInterventoriaCodigo == 0 && estaEditando)
+                element.proyecto.estadoProyectoObraCodigo != 3 &&
+                element.proyecto.estadoProyectoObraCodigo != 5 &&
+                element.proyecto.estadoProyectoObraCodigo != 7 &&
+                estaEditando
+              "
+            />
+          </span>
+
+          <!-- interventoria -->
+          <mat-form-field
+            class="select-width"
+            [class.mat-form-field-invalid]="!element.proyecto.estadoProyectoInterventoriaCodigo && estaEditando"
+            *ngIf="contratacion.tipoSolicitudCodigo === '2'"
+          >
+            <mat-select
+              required
+              [(ngModel)]="element.proyecto.estadoProyectoInterventoriaCodigo"
+              (selectionChange)="onChangeEstado()"
+            >
+              <mat-option *ngFor="let estado of listaEstados" [value]="estado.codigo">
+                {{ estado.nombre }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <span class="icon-incompleto" *ngIf="contratacion.tipoSolicitudCodigo === '2'">
+            <img
+              class="icon-incompleto--img"
+              src="assets/img/icon/incompleto.svg"
+              alt="este campo es requerido"
+              [matTooltipPosition]="'above'"
+              matTooltip="Debe ingresar la información en el campo para continuar"
+              matTooltipClass="info-tooltip"
+              *ngIf="
+                element.proyecto.estadoProyectoInterventoriaCodigo != 3 &&
+                element.proyecto.estadoProyectoInterventoriaCodigo != 5 &&
+                element.proyecto.estadoProyectoInterventoriaCodigo != 7 &&
+                estaEditando
               "
             />
           </span>
@@ -87,7 +112,10 @@
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
       <td mat-cell *matCellDef="let element">
-        <button mat-raised-button type="button" (click)="
+        <button
+          mat-raised-button
+          type="button"
+          (click)="
             Observaciones(
               element.contratacionProyectoId,
               element.contratacionId,
@@ -96,14 +124,22 @@
               element.proyecto.estadoProyectoObraCodigo,
               0
             )
-          " *ngIf="contratacion.tipoSolicitudCodigo === '1'" mat-raised-button color="accent" class="btn-table"
+          "
+          *ngIf="contratacion.tipoSolicitudCodigo === '1'"
+          mat-raised-button
+          color="accent"
+          class="btn-table"
           [disabled]="
             element.proyecto.estadoProyectoObraCodigo == null ||
             element.proyecto.estadoProyectoObraCodigo == estadosProyecto.AprobadoComiteTecnico
-          ">
+          "
+        >
           Observaciones
         </button>
-        <button mat-raised-button type="button" (click)="
+        <button
+          mat-raised-button
+          type="button"
+          (click)="
             Observaciones(
               element.contratacionProyectoId,
               element.contratacionId,
@@ -112,11 +148,16 @@
               0,
               element.proyecto.estadoProyectoInterventoriaCodigo
             )
-          " *ngIf="contratacion.tipoSolicitudCodigo === '2'" mat-raised-button color="accent" class="btn-table"
+          "
+          *ngIf="contratacion.tipoSolicitudCodigo === '2'"
+          mat-raised-button
+          color="accent"
+          class="btn-table"
           [disabled]="
             element.proyecto.estadoProyectoInterventoriaCodigo == null ||
             element.proyecto.estadoProyectoInterventoriaCodigo == estadosProyecto.AprobadoComiteTecnico
-          ">
+          "
+        >
           Observaciones
         </button>
       </td>
